--- a/OPNS_Demo_fe/angular.json
+++ b/OPNS_Demo_fe/angular.json
@@ -35,7 +35,8 @@
               "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/sweetalert2/src/sweetalert2.js"
             ]
           },
           "configurations": {
