--- a/OPNS_Demo_fe/angular.json
+++ b/OPNS_Demo_fe/angular.json
@@ -35,8 +35,7 @@
               "node_modules/bootstrap/scss/bootstrap.scss"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-              "node_modules/sweetalert2/src/sweetalert2.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
             ]
           },
           "configurations": {
@@ -73,7 +72,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-devkit/build-angular:dev-server",                    
           "configurations": {
             "production": {
               "browserTarget": "OPNS_Demo:build:production"
