--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+### Front-end ###
+
 node_modules/
-.metadata/
-sicurezza.zip_expanded/
 .angular/
 .vscode/
+
+### Back-end ###
+
+.metadata/
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
